analytics pg alignment, drawer img size fix

--- a/styles/Analytics.module.scss
+++ b/styles/Analytics.module.scss
@@ -65,7 +65,7 @@
 .barchartsection {
   margin-top: 10rem;
   margin-left: 5rem;
-  width: 100%;
+  width: 70vw;
   display: flex;
   justify-content: center;
   flex-direction: column;
@@ -142,7 +142,7 @@
   position: relative;
   height: 100%;
   z-index: 20;
-  width: 100%;
+  width: 70vw;
   margin-top: 10rem;
   margin-left: 5rem;
   // margin-bottom: 10rem;
